fix: left aligned the title text between the icon and close button

--- a/src/components/Kite/Kite.module.css
+++ b/src/components/Kite/Kite.module.css
@@ -28,7 +28,6 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -37,7 +36,11 @@
   min-width: 0;
   display: flex;
   align-items: center;
-  width: 80%;
+  width: 100%;
+}
+
+.title {
+  flex-grow: 2;
 }
 
 .dismissButton {
@@ -53,7 +56,6 @@
 
 .enterDone {
   opacity: 1;
-  pointer-events: visible;
   transform: translateX(0);
 }
 
